<resources>
    <string name="app_name">Delivery HUB</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="my_orders">My Orders</string>
    <string name="amount_due">Amount Due</string>
    <string name="can_return">Return Order</string>
    <string name="more_services">More Services</string>
    <string name="call_customer_care">Call Customer Care</string>
    <string name="logout">Logout</string>
    <string name="Rs">\u20B9</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instant_service">Instant Delivery</string>
    <string name="schedule_service">Schedule Delivery</string>
    <string name="userlogin" />
    <string name="create_new_account">Create New Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="_91">+91</string>
    <string name="email">Email</string>
    <string name="i_agree_the_terms_and_conditions">I agree the Terms and Conditions</string>
    <string name="signup">New Registration</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="sign_up">SignUp</string>
    <string name="login">LOGIN</string>
    <string name="str_atv_places">Enter Place Here</string>
    <string name="search_places">Search Places</string>
    <string name="total_amount">Total Amount : </string>
    <string name="a_sum_of_150_will_be_charged_on_every_new_can">A sum of ₹150/- will be charged on every new can</string>
    <string name="price_of_water">Price of Item</string>
    <string name="empty_can_price">Empty can price</string>
    <string name="do_you_want_to_buy_new_cans">Do you want to Buy new cans</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="select_payment_type">Select Payment Type</string>
    <string name="online_payment">Online Payment</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="register_new_item">Register New Item</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="item_size_ex_kgs_ltrs_pieces_per_pack">Item Units (Ex. Kgs/ltrs/pieces)</string>
    <string name="minimum_quantity_order_minimum_qty">Minimum quantity per order</string>
    <string name="submit">SUBMIT</string>
    <string name="add_address">Add Address</string>
    <string name="flat_apartment_number">Flat/Apartment Number</string>
    <string name="building_apartment">Building/Apartment</string>
    <string name="area_streetname">Area/StreetName</string>
    <string name="cityname">CityName</string>
    <string name="address_type">Address Type</string>
    <string name="save">Save</string>
    <string name="landmark">Landmark</string>
    <string name="schedule_delivery_date">Schedule Delivery date</string>
    <string name="place_your_order">Place your order</string>
    <string name="please_select_delivery_address_to_proceed">Please select delivery address to proceed</string>
    <string name="select_address">Select address</string>
    <string name="products">Products</string>
    <string name="my_cart">My Cart</string>
    <string name="service_tax">Service Tax</string>
    <string name="add_item">Add Item</string>
    <string name="add_employee">Add Employee</string>
    <string name="view_item">View Item</string>
    <string name="user_profile">My Profile</string>
    <string name="shopname">Shopname</string>
    <string name="_address">Address</string>
    <string name="modify_item">Modify Item</string>
    <string name="update_order">Update Order</string>
    <string name="add_category">Add Category</string>
    <string name="category_name">Category Name</string>
    <string name="item_description">Item Description</string>
    <string name="vendors_list">Vendors List</string>
    <string name="dashboard">Dashboard</string>
    <string name="menu_cart">My Cart</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_fav">Favourites</string>
    <string name="menu_dashboard">Home</string>
    <string name="menu_orders">My Orders</string>
    <string name="search_hint">Search Item</string>
    <string name="stores">Stores</string>
    <string name="my_queries">My Queries</string>
    <string name="chat_with_us">Ask Queries</string>
    <string name="stores_items">Store Items</string>
    <string name="mobility">Mobility</string>
    <string name="my_coupons">My Coupons</string>
    <string name="offer_zone">Offer zone</string>
    <string name="my_whishlist">My Whishlist</string>
    <string name="my_notifications">My Notifications</string>
    <string name="gift_card">Gift Card</string>
    <string name="my_store_cart">My Store Cart</string>
    <string name="mrp_total">MRP Total</string>
    <string name="discount">Discount</string>
    <string name="payable_amount">Payable Amount</string>
    <string name="payment_details">Payment Details</string>
</resources>
