<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_myorders"
            android:icon="@drawable/ic_my_orders_menu"
            android:iconTint="@color/grey"
            android:title="@string/my_orders" />
        <item
            android:id="@+id/nav_userprofile"
            android:icon="@drawable/ic_employ_navi"
            android:iconTint="@color/grey"
            android:title="@string/user_profile" />

        <item
            android:id="@+id/nav_customercare"
            android:icon="@drawable/ic_cust_care"
            android:iconTint="@color/grey"
            android:title="@string/call_customer_care" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:iconTint="@color/grey"
            android:title="@string/logout" />

    </group>
</menu>