<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".SignUpActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="8dp"
        android:elevation="3dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/create_new_account"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/signup_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/first_name"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/darkgrey"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/signup_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/last_name"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/darkgrey"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_text_background"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_91"
                    android:textColor="@color/darkgrey"
                    android:textSize="17sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/grey" />

                <EditText
                    android:id="@+id/signup_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/mobile_number"
                    android:maxLength="10"
                    android:textColor="@color/black"
                    android:textColorHint="@color/darkgrey"
                    android:textSize="17sp" />
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/email"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/darkgrey"
                android:textSize="17sp"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/chk_terms_condition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:visibility="gone"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:buttonTint="@color/black"
                android:text="@string/i_agree_the_terms_and_conditions"
                android:textSize="17sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button_background"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>