<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="8dp"
        android:elevation="3dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:id="@+id/select_address_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/select_address"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/address_list"
                android:layout_width="match_parent"
                android:layout_height="350dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_address_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/add_address"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:drawableRight="@drawable/ic_my_location_black_24dp"
                android:drawablePadding="15dp"
                android:padding="5dp"
                android:text="Detected Location"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edt_flatno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/flat_apartment_number"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/darkgrey"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edt_apartmentname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/building_apartment"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/darkgrey"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edt_landmark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/landmark"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/darkgrey"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/edt_areaname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/area_streetname"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/darkgrey"
                android:textSize="17sp"
                android:visibility="visible" />

            <EditText
                android:id="@+id/edt_cityname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/cityname"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/darkgrey"
                android:textSize="17sp"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:padding="5dp"
                android:text="@string/address_type"
                android:textColor="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/type_home"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_background"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="Home"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/type_work"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_background"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="Work"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/type_others"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_background"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="Others"
                    android:textColor="@color/black" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_addr_submit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="15dp"
                android:textAllCaps="false"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button_background"
                android:text="Save &amp; Proceed"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>